--- a/TextEditor/Views/MainWindow.xaml
+++ b/TextEditor/Views/MainWindow.xaml
@@ -8,6 +8,8 @@
         xmlns:local="clr-namespace:TextEditor"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800"
+        MinWidth="400"
+        MinHeight="400"
         AllowsTransparency="True"
         WindowStyle="None"
         Background="Transparent" Foreground="{StaticResource Foreground.Primary}">
@@ -58,8 +60,10 @@
             </Grid>
 
             <Grid Grid.Row="2">
-                <Label Name="LineCountText" Foreground="{StaticResource Foreground.Secondary}" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="10 0 0 0"/>
-                <Label Name="LettersCountText"  Foreground="{StaticResource Foreground.Secondary}" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="10 0 0 0"/>
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" HorizontalAlignment="Left">
+                    <Label Name="LettersCountText"  Foreground="{StaticResource Foreground.Secondary}" Margin="10 0 0 0"/>
+                    <Label Name="FileSizeText" Foreground="{StaticResource Foreground.Secondary}"  Margin="10 0 0 0"/>
+                </StackPanel>
             </Grid>
 
             <Grid Grid.Row="1" Grid.Column="0">
